[package]
name = "kasukasu"
description = "Kasukasu is Kasumin's music player server."
authors = ["Joshua Megnauth <>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/joshuamegnauth54/kasumin"
license = "GPL-3.0"
keywords = ["music", "multimedia", "media", "server", "application"]
categories = ["command-line-interface", "multimedia::audio"]

[[bin]]
name = "kasukasud"
required-features = ["daemon"]
path = "src/daemon/main.rs"

[lib]
name = "kasukasu"
path = "src/lib/lib.rs"

[features]
default = ["all_codecs"]
daemon = ["dep:serde", "dep:tokio", "dep:yohane"]

# Codecs
all_codecs = ["aac", "flac", "isomp4", "mp3", "vorbis", "wav"]
aac = ["rodio/symphonia-aac"]
flac = ["rodio/symphonia-flac"]
isomp4 = ["rodio/symphonia-isomp4"]
mp3 = ["rodio/symphonia-mp3"]
vorbis = ["rodio/symphonia-vorbis"]
wav = ["rodio/symphonia-wav"]
spotify = ["dep:librespot", "dep:keyring"]

# Sound server APIs
asio = ["cpal/asio"]
jack = ["cpal/jack"]

[dependencies]
cpal = "0.15.2"
rodio = { version = "0.17.1", default-features = false }
thiserror = "1.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

# Daemon
serde = { version = "1.0", optional = true }
tokio = { version = "1.3.0", optional = true }
yohane = { version = "0.1.0", path = "../yohane", optional = true }

# Spotify
librespot = { version = "0.4.2", optional = true }
keyring = { version = "2.0.2", optional = true }
