[package]
name = "kasumin"
description = "Kasumin plays music from files, Spotify, and other sources."
authors = ["Joshua Megnauth <jo.sh@tutanota.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/joshuamegnauth54/kasumin"
license = "GPL-3.0"
keywords = ["application", "media", "multimedia", "music", "streaming"]
categories = [
  "command-line-interface",
  "multimedia::audio",
  "network-programming",
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "kasumin"
path = "src/lib/lib.rs"

[features]
default = ["all_codecs"]
spotify = ["dep:librespot", "dep:keyring"]

# Codecs
all_codecs = ["aac", "flac", "isomp4", "mp3", "vorbis", "wav"]
aac = ["rodio/symphonia-aac"]
flac = ["rodio/symphonia-flac"]
isomp4 = ["rodio/symphonia-isomp4"]
mp3 = ["rodio/symphonia-mp3"]
vorbis = ["rodio/symphonia-vorbis"]
wav = ["rodio/symphonia-wav"]

# Sound server APIs
asio = ["cpal/asio"]
jack = ["cpal/jack"]

[dependencies]
cpal = "0.15.2"
rodio = { version = "0.17.1", default-features = false }
thiserror = "1.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

# Spotify
librespot = { version = "0.4.2", optional = true }
keyring = { version = "2.0.2", optional = true }

# Tokio for daemon
[dependencies.tokio]
version = "1.3.0"
optional = true
default-features = false
features = [
  "net",             # Sockets for the server
  "macros",          # For tokio::main and other macros
  "rt",              # Runtime
  "rt-multi-thread", # Multithreaded runtime is the default
  "sync",            # Channels and such
]
