[package]
name = "yohane"
description = "Yohane is a CLI for Kasumin."
authors = ["Joshua Megnauth <jo.sh@tutanota.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/joshuamegnauth54/kasumin"
license = "GPL-3.0"
keywords = ["music", "multimedia", "media", "protocol", "application"]
categories = ["multimedia::audio", "network-programming"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
kasumin = { version = "0.1.0", path = "../kasumin", features = ["spotify"] }
tui = { package = "ratatui", version = "0.22" }
